attached_assets/Pasted-chunk-WERSD76P-js-v-af4c8484-21551-Download-the-React-DevTools-for-a-better-development-experience--1752653611158_1752653611159.txt
chunk-WERSD76P.js?v=af4c8484:21551 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
pwa.ts:44 SSELFIE Studio: Service Worker registered ServiceWorkerRegistration
App.tsx:290 SSELFIE Studio: App rendering...
use-auth.ts:48 🔍 useAuth final state: Object
use-auth.ts:14 🔍 Auth check: Making request to /api/auth/user
App.tsx:105 ProtectedRoute state: Object
App.tsx:263 SSELFIE Studio: App initializing...
App.tsx:284 SSELFIE Studio: Domain access validated, app ready
workspace:1 Error while trying to use the following icon from the Manifest: https://sselfie.ai/icon-192.png (Download error or resource isn't a valid image)Understand this error
api/auth/user:1  Failed to load resource: the server responded with a status of 401 (Unauthorized)Understand this error
use-auth.ts:22 🔍 Auth check: Response status: 401
use-auth.ts:26 🔍 Auth check: User not authenticated (401)
use-auth.ts:48 🔍 useAuth final state: Object
chunk-WERSD76P.js?v=af4c8484:521 Warning: React has detected a change in the order of Hooks called by ProtectedRoute. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useContext                 useContext
2. useContext                 useContext
3. useContext                 useContext
4. useEffect                  useEffect
5. useState                   useState
6. useCallback                useCallback
7. useSyncExternalStore       useSyncExternalStore
8. useEffect                  useEffect
9. useContext                 useContext
10. useSyncExternalStore      useSyncExternalStore
11. useRef                    useRef
12. useInsertionEffect        useInsertionEffect
13. useEffect                 useEffect
14. undefined                 useEffect
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    at ProtectedRoute (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/src/App.tsx?v=wSm-IMbRfr7WUJ2jPn-uy:107:38)
    at component
    at Route (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=af4c8484:323:16)
    at Switch (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=af4c8484:379:17)
    at Router
    at Provider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-HDGO5FZK.js?v=af4c8484:35:15)
    at TooltipProvider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js?v=af4c8484:2246:5)
    at QueryClientProvider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=af4c8484:2805:3)
    at App (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/src/App.tsx?v=wSm-IMbRfr7WUJ2jPn-uy:747:3)
printWarning @ chunk-WERSD76P.js?v=af4c8484:521Understand this error
use-auth.ts:48 🔍 useAuth final state: Object
chunk-WERSD76P.js?v=af4c8484:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-WERSD76P.js?v=af4c8484:11678:21)
    at updateEffectImpl (chunk-WERSD76P.js?v=af4c8484:12074:22)
    at updateEffect (chunk-WERSD76P.js?v=af4c8484:12099:18)
    at Object.useEffect (chunk-WERSD76P.js?v=af4c8484:12703:22)
    at Object.useEffect (chunk-3TFVT2CW.js?v=af4c8484:1078:29)
    at ProtectedRoute (App.tsx:119:11)
    at renderWithHooks (chunk-WERSD76P.js?v=af4c8484:11548:26)
    at updateFunctionComponent (chunk-WERSD76P.js?v=af4c8484:14582:28)
    at beginWork (chunk-WERSD76P.js?v=af4c8484:15924:22)
    at HTMLUnknownElement.callCallback2 (chunk-WERSD76P.js?v=af4c8484:3674:22)Understand this error
use-auth.ts:48 🔍 useAuth final state: Object
use-auth.ts:48 🔍 useAuth final state: Object
chunk-WERSD76P.js?v=af4c8484:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-WERSD76P.js?v=af4c8484:11678:21)
    at updateEffectImpl (chunk-WERSD76P.js?v=af4c8484:12074:22)
    at updateEffect (chunk-WERSD76P.js?v=af4c8484:12099:18)
    at Object.useEffect (chunk-WERSD76P.js?v=af4c8484:12703:22)
    at Object.useEffect (chunk-3TFVT2CW.js?v=af4c8484:1078:29)
    at ProtectedRoute (App.tsx:119:11)
    at renderWithHooks (chunk-WERSD76P.js?v=af4c8484:11548:26)
    at updateFunctionComponent (chunk-WERSD76P.js?v=af4c8484:14582:28)
    at beginWork (chunk-WERSD76P.js?v=af4c8484:15924:22)
    at HTMLUnknownElement.callCallback2 (chunk-WERSD76P.js?v=af4c8484:3674:22)Understand this error
chunk-WERSD76P.js?v=af4c8484:14032 The above error occurred in the <ProtectedRoute> component:

    at ProtectedRoute (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/src/App.tsx?v=wSm-IMbRfr7WUJ2jPn-uy:107:38)
    at component
    at Route (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=af4c8484:323:16)
    at Switch (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=af4c8484:379:17)
    at Router
    at Provider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-HDGO5FZK.js?v=af4c8484:35:15)
    at TooltipProvider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js?v=af4c8484:2246:5)
    at QueryClientProvider (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=af4c8484:2805:3)
    at App (https://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/src/App.tsx?v=wSm-IMbRfr7WUJ2jPn-uy:747:3)

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://reactjs.org/link/error-boundaries to learn more about error boundaries.
logCapturedError @ chunk-WERSD76P.js?v=af4c8484:14032Understand this error
chunk-WERSD76P.js?v=af4c8484:9129 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-WERSD76P.js?v=af4c8484:11678:21)
    at updateEffectImpl (chunk-WERSD76P.js?v=af4c8484:12074:22)
    at updateEffect (chunk-WERSD76P.js?v=af4c8484:12099:18)
    at Object.useEffect (chunk-WERSD76P.js?v=af4c8484:12703:22)
    at Object.useEffect (chunk-3TFVT2CW.js?v=af4c8484:1078:29)
    at ProtectedRoute (App.tsx:119:11)
    at renderWithHooks (chunk-WERSD76P.js?v=af4c8484:11548:26)
    at updateFunctionComponent (chunk-WERSD76P.js?v=af4c8484:14582:28)
    at beginWork (chunk-WERSD76P.js?v=af4c8484:15924:22)
    at beginWork$1 (chunk-WERSD76P.js?v=af4c8484:19753:22)Understand this error
client:536 WebSocket connection to 'wss://e33979fc-c9be-4f0d-9a7b-6a3e83046828-00-3ij9k7qy14rai.picard.replit.dev/?token=BC09KwOGsbT0' failed: 
setupWebSocket @ client:536Understand this error
client:536 Uncaught (in promise) SyntaxError: Failed to construct 'WebSocket': The URL 'wss://localhost:undefined/?token=BC09KwOGsbT0' is invalid.
    at setupWebSocket (client:536:19)
    at fallback (client:509:16)
    at WebSocket.<anonymous> (client:555:7)